--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@
 	font-size: 21px;
 	line-height: 21px;
 }
-.texto{
+.text{
 
 	text-align: left;
 	font-family: sans-serif;	
@@ -67,18 +67,25 @@
 	font-style: italic;
 	color: #FFFFFF;
 }
-.texto1{
+.text1{
 
-	text-align: center;
+	position: absolute;
+	
+	left: 140px;
+	top: 80;
+	/*text-align: left;*/
 	font-family: sans-serif;	
 	font-size: 180%;
 	font-style: italic;
 	color: #0A122A;
 }
 .download-btn{
+	position: relative;
+	top: 230px;		
+	right:  250px;	
 	width: 15%;
 	height: 15px;
-	left: 10%;
+	
 }
 .izd{
 	text-align: left;
